--- a/AKKIN/AKKIN/Support/Info.plist
+++ b/AKKIN/AKKIN/Support/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>ko</string>
+	</array>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>사진을 저장하기 위해 사진 앨범에 접근할 권한이 필요합니다</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
